# jobs

./: .env.example  .gitignore  README.md  ai_scorer.py  config.example.yaml  config.py  config.yaml  dedup.py  form_filler.py  models.py  orchestrator.py  pyproject.toml  salary.py  scheduler.py  scorer.py
.claude/: CLAUDE.md  gsd-file-manifest.json  settings.json  settings.local.json
.claude/agents/: job-scorer.md  platform-scout.md  resume-tailor.md
.claude/hooks/: python-lint.sh
.github/workflows/: ci.yml  deploy-site.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-config-externalization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-platform-architecture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-discovery-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-scheduled-automation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/quick/: kanban-redesign-research.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apply_engine/: __init__.py  config.py  dedup.py  engine.py  events.py
claude_cli/: __init__.py  client.py  exceptions.py  parser.py
core/: __init__.py  config.py  dedup.py  form_filler.py  interview_prep.py  models.py  orchestrator.py  salary.py  scheduler.py  scorer.py
design/: architecture.md
design/diagrams/: 04-component-dependency-graph.mmd  06-dashboard-apply-pipeline.mmd
docs/: architecture.md
docs/diagrams/: 01-birds-eye-view.mmd  02-high-level-architecture.mmd  03-directory-module-map.mmd  05-job-discovery-pipeline.mmd  07-ai-resume-tailoring.mmd  08-scraper-architecture.mmd  09-scoring-matching.mmd  10-api-surface-map.mmd  11-database-schema.mmd  12-scheduler-infrastructure.mmd  13-ai-integration-map.mmd
job_pipeline/: jobs.db  tracker.md
resume_ai/: cover_letter.py  diff.py  extractor.py  models.py  renderer.py  tailor.py  tracker.py  validator.py
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME  llms.txt  robots.txt
tests/: conftest.py  conftest_factories.py  test_ai_scorer.py  test_config.py  test_dedup.py  test_delta.py  test_models.py  test_salary.py  test_scorer.py  test_smoke.py
tests/apply_engine/: test_dedup.py  test_engine.py  test_events.py
tests/claude_cli/: conftest.py  test_client.py  test_exceptions.py  test_parser.py
tests/e2e/: conftest.py  test_dashboard.py  test_export.py  test_kanban.py  test_status.py
tests/fixtures/: test_config.yaml
tests/resume_ai/: conftest.py  test_cover_letter.py  test_diff.py  test_extractor.py  test_models.py  test_renderer.py  test_tailor.py  test_tracker.py  test_validator.py
tests/webapp/: conftest.py  test_cover_letter_sse.py  test_db.py  test_endpoints.py  test_resume_sse.py
webapp/: app.py  db.py
webapp/templates/: analytics.html  base.html  dashboard.html  job_detail.html  kanban.html  run_history.html
(+184 files in other folders)
