[project]
name = "jobs"
version = "0.1.0"
description = "Job search automation pipeline — scrape, score, and apply."
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings[yaml]>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-jobspy>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "rapidfuzz>=3.14",
    "anthropic>=0.79.0",
    "pymupdf4llm>=0.2.9",
    "weasyprint>=68.0",
    "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[project.scripts]
jobs-scrape = "orchestrator:main"
jobs-web = "webapp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platforms", "webapp", "resume_ai"]

[tool.hatch.build.targets.wheel.force-include]
"orchestrator.py" = "orchestrator.py"
"config.py" = "config.py"
"models.py" = "models.py"
"scorer.py" = "scorer.py"
"form_filler.py" = "form_filler.py"
"salary.py" = "salary.py"
"dedup.py" = "dedup.py"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
